# occamy

./: .gitignore  .gitmodules  CMakeLists.txt  MLIR.cmake  README.md
docker/: Dockerfile.cuda.core-dnn  README.md
include/: CMakeLists.txt
include/core-dnn/Compiler/: CDCompilerTypes.h  CMakeLists.txt
src/: CMakeLists.txt  core-dnn.cpp
src/Compiler/: CMakeLists.txt  CoreDNNOptions.cpp  CoreDNNOptions.hpp  CoreDNNPasses.cpp  CoreDNNPasses.hpp  CoreDNNUtils.cpp  CoreDNNUtils.hpp
src/Conversion/: CMakeLists.txt
src/Conversion/DNNToLLVM/: CMakeLists.txt  ConvertDNNToLLVM.cpp  DNNAPISpecs.inc  DNNRuntimeAPI.cpp  DNNRuntimeAPI.hpp  DNNToLLVMCommon.cpp  DNNToLLVMCommon.hpp
src/Conversion/DNNToLLVM/Ops/: CMakeLists.txt
src/Conversion/DNNToLLVM/Ops/cublas/: CMakeLists.txt  Matmul2d.cpp
src/Conversion/DNNToLLVM/Ops/cuda/: CMakeLists.txt  Cast.cpp  Clip.cpp  Concat.cpp  Dealloc.cpp  Erf.cpp  Expand.cpp  Flatten.cpp  Gather.cpp  LeakyRelu.cpp  Malloc.cpp  MatmulNd.cpp  MemOffset.cpp  MemPoolInit.cpp  Memcpy.cpp  Negative.cpp  NonZero.cpp  PRelu.cpp  Pow.cpp  Reciprocal.cpp  Reshape.cpp  Softmax.cpp  Squeeze.cpp  Transpose.cpp  Unsqueeze.cpp
src/Conversion/DNNToLLVM/Ops/cudnn/: ActivationForward.cpp  Add.cpp  AveragePool.cpp  CMakeLists.txt  ConvForward.cpp  MaxPool.cpp  Mul.cpp  Reduce.cpp  Sqrt.cpp
src/Conversion/DNNToLLVM/Ops/cudnn/fusedOps/: CMakeLists.txt  ConvBiasActiv.cpp
src/Conversion/ONNXToDNN/: CMakeLists.txt  ConvertONNXToDNN.cpp  ONNXToDNNCommon.cpp  ONNXToDNNCommon.hpp  ONNXToDNNCommonCUDA.cu  ONNXToDNNCommonCUDA.cuh
src/Conversion/ONNXToDNN/Ops/: CMakeLists.txt  Constant.cpp  ConstantOfShape.cpp
src/Conversion/ONNXToDNN/Ops/cublas/: CMakeLists.txt  Gemm.cpp
src/Conversion/ONNXToDNN/Ops/cuda/: CMakeLists.txt  Cast.cpp  Clip.cpp  Concat.cpp  Erf.cpp  Expand.cpp  Flatten.cpp  Gather.cpp  LeakyRelu.cpp  MatMul.cpp  NonZero.cpp  PRelu.cpp  Pad.cpp  Pow.cpp  Reshape.cpp  Squeeze.cpp  SqueezeV11.cpp  Transpose.cpp  Unsqueeze.cpp  UnsqueezeV11.cpp
src/Conversion/ONNXToDNN/Ops/cudnn/: Add.cpp  AveragePool.cpp  CMakeLists.txt  Conv.cpp  Div.cpp  MaxPoolSingleOut.cpp  Mul.cpp  Reduce.cpp  ReduceMeanV13.cpp  Relu.cpp  Sigmoid.cpp  Softmax.cpp  Sqrt.cpp  Sub.cpp  Tanh.cpp
src/Dialect/: CMakeLists.txt
src/Dialect/DNN/: CMakeLists.txt  DNN.td  DNNOps.cpp  DNNOps.hpp
src/Pass/: CDPasses.hpp
src/Tools/: CMakeLists.txt
src/Tools/dnn-wrapper/: CMakeLists.txt  helpers.h
src/Tools/dnn-wrapper/cublas/: CUBLASMatmul2dFunc.cu
src/Tools/dnn-wrapper/cuda/: CUDACastI64toFloatFunc.cu  CUDAClipFunc.cu  CUDAConcatFloatFunc.cu  CUDAConcatInt64Func.cu  CUDAErfFunc.cu  CUDAExpandInt64Func.cu  CUDAFlattenFunc.cpp  CUDAGatherFloatFunc.cu  CUDAGatherInt64Func.cu  CUDALeakyReluFunc.cu  CUDAMatmulNdFunc.cu  CUDANegativeFunc.cu  CUDANonZeroFloatFunc.cu  CUDANonZeroInt64Func.cu  CUDAPReluFunc.cu  CUDAPowFunc.cu  CUDAReciprocalFunc.cu  CUDAReshapeFunc.cpp  CUDASoftmaxFunc.cu  CUDASqueezeFloatFunc.cpp  CUDASqueezeInt64Func.cpp  CUDATranspose2DFloatFunc.cu  CUDATranspose2DInt64Func.cu  CUDATranspose3DFloatFunc.cu  CUDATranspose3DInt64Func.cu  CUDATranspose4DFloatFunc.cu  CUDATranspose4DInt64Func.cu  CUDATranspose6DFloatFunc.cu  CUDATranspose6DInt64Func.cu  CUDAUnsqueezeFloatFunc.cpp  CUDAUnsqueezeInt64Func.cpp  Makefile  counter.hpp  malloccounter.hpp  wrapDNNDealloc.cpp  wrapDNNMalloc.cpp  wrapDNNMemOffset.cpp  wrapDNNMemPoolInit.cpp  wrapDNNMemcpy.cpp
src/Tools/dnn-wrapper/cudnn/: CUDNNActiveFunc.cpp  CUDNNAveragePoolFunc.cpp  CUDNNConvFunc.cpp  CUDNNMaxPoolFunc.cpp  CUDNNReduceFunc.cpp  CUDNNTensorOpFunc.cpp  cudnnCounter.hpp
src/Tools/dnn-wrapper/cudnn/fusedOp/: CUDNNConvBiasReluFunc.cpp
src/Transform/: CMakeLists.txt
src/Transform/DNN/: CMakeLists.txt  DNNDeallocOpt.cpp  FunctionArgument.cpp  eraseDummyConstants.cpp  mallocPoolOpt.cpp  mallocPoolOpt.hpp
src/Transform/DNN/opFusing/: CMakeLists.txt  fuseConvBiasRelu.cpp
src/Transform/ONNX/: CMakeLists.txt  ONNXConstantAtUsePass.cpp  ONNXConstantHoistingPass.cpp
test/: CMakeLists.txt
test/models/: CMakeLists.txt
test/models/alexnet/: run.py
test/models/mobilenet/: run.py
test/models/resnet50/: run.py
test/models/simpleconv/: run.py
test/models/srgan/: CMakeLists.txt  dataset.py  run.py  test_config.py.in
test/models/ssd-resnet50/: CMakeLists.txt  run.py
test/models/yolo/: CMakeLists.txt  run.py
